Implement sqlite3 in database layer and api

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "I want sqlite3 and node to interacte so i can use it in my pet list project",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "sqlite3": "^3.1.6"
   },
